# odict-converters

./: .gitattributes  .gitignore  .tool-versions  BUILD.bazel  README.md  WORKSPACE  dict.py  justfile  main.py  network.py  odict.h  odictlib.py  pyproject.toml  requirements.txt  setup.py  tei.py
.github/workflows/: dictionaries.yml
generators/: cedict.py  ecdict.py  freedict.py  jmdict.py  utils.py  wiktextract.py
