load("@rules_python//python:defs.bzl", "py_binary")
load("@deps//:requirements.bzl", "requirement")

py_binary(
    name = "main-bin",
    srcs = glob(["*.py"]),
    data = ["@odict//bridge:shared"],
    main = "main.py",
    deps = [
        requirement("beautifulsoup4"),
        requirement("urllib3"),
        requirement("requests"),
        requirement("certifi"),
        requirement("chardet"),
        requirement("idna"),
        requirement("lxml"),
        requirement("soupsieve"),
        "@odict//python",
    ],
)

alias(
    name = "main",
    actual = "//:main-bin",
)
