[tool.poetry]
name = "generators"
version = "0.1.0"
description = ""
authors = ["Tyler Nickerson <nickersoft@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
asyncio = "^3.4.3"
alive-progress = "^2.4.1"
lxml = "^4.9.1"
theopendictionary = "^0.0.7"
ftputil = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
